--- a/main.css
+++ b/main.css
@@ -61,3 +61,11 @@ background: #D1D8EC;
 -webkit-box-shadow: 11px 11px 16px #54565e, -11px -11px 16px #ffffff;
 box-shadow: 11px 11px 16px #54565e, -11px -11px 16px #ffffff;
 }
+
+.sold-out{
+  position:absolute;
+  top:60px;
+  left: 0px;
+  width: 500px;
+  height: auto;
+}
